# TestTool

./: .env.example  .gitignore  README.md  Test air.spec  assertions.py  main.py  pyproject.toml  requests.json  requirements.txt
.github/workflows/: ci.yml
results/: default_suite_20260106_154444.json  default_suite_20260106_154742.json
src/requesttool/: assertions.py  batch_executor.py  batch_thread_executor.py  cli.py  controller.py  exporter.py  http_client.py  result_exporter.py  result_summary.py  workers.py
src/requesttool/ui/: __init__.py  main_window.py  panels.py
tests/: test_assertions.py  test_batch_executor.py  test_batch_thread_executor.py  test_http_client.py  test_result_exporter.py  test_result_summary.py  test_workers.py
